[gd_scene load_steps=21 format=3 uid="uid://d0u34wf3l0rjm"]

[ext_resource type="Script" path="res://Script/Entity/Enemy/Monster/Ngu/Ngu_1.gd" id="1_g8pwj"]
[ext_resource type="Shader" path="res://Script/Function/Shader/flash.gdshader" id="2_s7fis"]
[ext_resource type="Texture2D" uid="uid://my2aiu3aarmj" path="res://Asset/Monster/Small/ngu1.png" id="2_yffh3"]
[ext_resource type="Texture2D" uid="uid://hp4y52i3sucv" path="res://Asset/Monster/UI/Life_bar_3.png" id="3_bgqdx"]
[ext_resource type="Texture2D" uid="uid://d30fgvujtvxui" path="res://Asset/Monster/UI/Detect3.png" id="4_hkqmi"]
[ext_resource type="Texture2D" uid="uid://cwbi38uva8f4c" path="res://Asset/Monster/UI/Life_bar_1.png" id="4_rbpnl"]
[ext_resource type="Texture2D" uid="uid://b4eggqyji3qdx" path="res://Asset/Monster/UI/Detect2.png" id="5_2tqal"]
[ext_resource type="Texture2D" uid="uid://fdgwgj0mjjg7" path="res://Asset/Monster/UI/Life_bar_2.png" id="5_uuo6o"]
[ext_resource type="Texture2D" uid="uid://b7tbn42od41ok" path="res://Asset/Monster/UI/Detect.png" id="6_kk0dv"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_g7bkv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_crosx"]
shader = ExtResource("2_s7fis")
shader_parameter/color = Color(0, 0, 0, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_tpdku"]
light_mode = 1

[sub_resource type="Animation" id="Animation_2ddjy"]
resource_name = "Blow"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LegColiision:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 41)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Leg1:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-41.0001, 33)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Leg2:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(46.9999, 33)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 0.25, 0.3, 0.35, 0.4, 0.425, 0.45, 0.475, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [-0.0698132, 0.0698132, -0.0698132, 0.0698132, -0.0698132, 0.0698132, -0.0698132, 0.0698132, -0.0698133]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/Up:rotation")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.05, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.872665, 0.0]
}

[sub_resource type="Animation" id="Animation_4xccg"]
resource_name = "Idle"
length = 0.40001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LegColiision:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(0, 41), Vector2(0, 48)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Leg1:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(-41.0001, 33), Vector2(-41.0001, 39)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Leg2:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(46.9999, 33), Vector2(46.9999, 39)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_6qoea"]
resource_name = "Move"
length = 0.400005
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LegColiision:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-1, 57), Vector2(0, 60), Vector2(0, 57), Vector2(0, 61)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Leg1:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-44.0001, 48.9999), Vector2(-35.0001, 40.9999), Vector2(-26.0001, 48.9999)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Leg2:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(49.9999, 49.0001), Vector2(26.9999, 49.0001), Vector2(37.9999, 41.0001)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.0349066, 0.0349066]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qmlou"]
_data = {
"Blow": SubResource("Animation_2ddjy"),
"Idle": SubResource("Animation_4xccg"),
"Move": SubResource("Animation_6qoea")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s7e8j"]
radius = 38.0
height = 144.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gfsok"]
radius = 22.0
height = 142.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_huuy0"]
size = Vector2(20, 77)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tg7qv"]
radius = 50.0
height = 160.0

[node name="NoiCom" type="RigidBody2D" groups=["target"]]
collision_layer = 2
collision_mask = 16
physics_material_override = SubResource("PhysicsMaterial_g7bkv")
lock_rotation = true
angular_damp = 10.0
script = ExtResource("1_g8pwj")

[node name="Body" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_crosx")
position = Vector2(0, 18)
texture = ExtResource("2_yffh3")
offset = Vector2(5, 0)
hframes = 2
vframes = 2

[node name="Ohno" type="TextureProgressBar" parent="Body"]
visible = false
material = SubResource("CanvasItemMaterial_tpdku")
offset_left = -32.0
offset_top = -132.0
offset_right = 32.0
offset_bottom = -68.0
value = 100.0
texture_under = ExtResource("4_hkqmi")
texture_over = ExtResource("5_2tqal")
texture_progress = ExtResource("6_kk0dv")

[node name="Leg1" type="Sprite2D" parent="Body"]
show_behind_parent = true
use_parent_material = true
position = Vector2(-41.0001, 33)
texture = ExtResource("2_yffh3")
offset = Vector2(10, 0)
hframes = 2
vframes = 2
frame = 2

[node name="Leg2" type="Sprite2D" parent="Body"]
show_behind_parent = true
use_parent_material = true
position = Vector2(46.9999, 33)
texture = ExtResource("2_yffh3")
offset = Vector2(-12, 0)
hframes = 2
vframes = 2
frame = 2

[node name="Up" type="Sprite2D" parent="Body"]
use_parent_material = true
position = Vector2(-55, -5)
texture = ExtResource("2_yffh3")
offset = Vector2(48, 5)
hframes = 2
vframes = 2
frame = 1

[node name="Anim" type="AnimationPlayer" parent="."]
playback_default_blend_time = 0.25
libraries = {
"": SubResource("AnimationLibrary_qmlou")
}

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 16)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_s7e8j")

[node name="LegColiision" type="CollisionShape2D" parent="."]
position = Vector2(0, 41)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_gfsok")

[node name="RightWall" type="RayCast2D" parent="."]
position = Vector2(70, 70)
target_position = Vector2(20, 0)

[node name="RightEdge" type="RayCast2D" parent="."]
position = Vector2(80, 30)
target_position = Vector2(0, 60)

[node name="LeftWall" type="RayCast2D" parent="."]
position = Vector2(-70, 70)
target_position = Vector2(-20, 0)

[node name="LeftEdge" type="RayCast2D" parent="."]
position = Vector2(-80, 30)
target_position = Vector2(0, 60)

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Detect" type="ShapeCast2D" parent="."]
position = Vector2(0, 15)
shape = SubResource("RectangleShape2D_huuy0")
target_position = Vector2(300, 0)
collide_with_areas = true

[node name="HP" type="TextureProgressBar" parent="."]
offset_left = -52.0
offset_top = -42.0
offset_right = 52.0
offset_bottom = -2.0
value = 100.0
texture_under = ExtResource("3_bgqdx")
texture_over = ExtResource("4_rbpnl")
texture_progress = ExtResource("5_uuo6o")

[node name="Countdown" type="Timer" parent="."]
one_shot = true

[node name="Area" type="Area2D" parent="."]
position = Vector2(0, 10)
collision_layer = 12
collision_mask = 5

[node name="BodyCollision" type="CollisionShape2D" parent="Area"]
position = Vector2(0, 16)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_tg7qv")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Countdown" to="." method="_on_countdown_timeout"]
[connection signal="area_entered" from="Area" to="." method="_on_area_area_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_area_body_entered"]
